COMPLETED TASK 5!! Added proper description in readme

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +179,25 @@
     "H = np.array([[0, -1, 35], [1, 0, 35], [0, 0, 1]])\n",
     "img = cv2.imread(\"calibration\\img1.png\")\n",
     "hej = projective_transform(img, H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 13 14 15 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cos = np.arange(17)\n",
+    "\n",
+    "print(cos[-5:])"
    ]
   }
  ],
